Use object-fit to fix the primary image when window grows too big (images looks stretches) and too small (image looks shrinks)

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,10 @@ footer {
     grid-column: 2 / -1;
     grid-row: 1 / 4;
     z-index: -1;
+    height: 100%;
+    max-height: 500px;
+    width: 100%;
+    object-fit: cover;
   }
 
   .secondary-images {
